@@ -834,6 +834,8 @@ unsigned char char_set_spectrum[]={		0
 //Cyrillic д - 135
 0x00,0x1C,0x24,0x24,0x44,0x7E,0x42,0x42,
 
+//Cyrillic я - 136
+0x00,0x3e,0x42,0x42,0x3e,0x22,0x42,0x00,
 
 
 };
@@ -922,6 +924,9 @@ unsigned char char_set_cpc[]={
 
 //Cyrillic д - 135
 0x00,0x1C,0x24,0x24,0x44,0x7E,0x42,0x42,
+
+//Cyrillic я - 136
+0x00,0x3e,0x42,0x42,0x3e,0x22,0x42,0x00,
 
 
 };
@@ -1016,6 +1021,9 @@ unsigned char char_set_z88[]={
 
 //Cyrillic д - 135
 0x00,0x1C,0x24,0x24,0x44,0x7E,0x42,0x42,
+
+//Cyrillic я - 136
+0x00,0x3e,0x42,0x42,0x3e,0x22,0x42,0x00,
 
 
 };
@@ -1115,6 +1123,9 @@ unsigned char char_set_sam[]={
 
 //Cyrillic д - 135
 0x00,0x1C,0x24,0x24,0x44,0x7E,0x42,0x42,
+
+//Cyrillic я - 136
+0x00,0x3e,0x42,0x42,0x3e,0x22,0x42,0x00,
 
 
 
@@ -1226,6 +1237,9 @@ unsigned char char_set_mansoftware[]={
 //Cyrillic д - 135
 0x00,0x1C,0x24,0x24,0x44,0x7E,0x42,0x42,
 
+//Cyrillic я - 136
+0x00,0x3e,0x42,0x42,0x3e,0x22,0x42,0x00,
+
 };
 
 
@@ -1322,6 +1336,9 @@ unsigned char char_set_ql[]={
 
 //Cyrillic д - 135
 0x00,0x1C,0x24,0x24,0x44,0x7E,0x42,0x42,
+
+//Cyrillic я - 136
+0x00,0x3e,0x42,0x42,0x3e,0x22,0x42,0x00,
 
 };
 
@@ -1459,6 +1476,7 @@ unsigned char char_set_retromac[]={
 //Cyrillic д - 135
 0x00,0x1C,0x24,0x24,0x44,0x7E,0x42,0x42,
 
-
+//Cyrillic я - 136
+0x00,0x3e,0x42,0x42,0x3e,0x22,0x42,0x00,
 
 };
