@@ -32,7 +32,7 @@ extern unsigned char char_set_mansoftware[];
 extern unsigned char char_set_ql[];
 extern unsigned char char_set_retromac[];
 
-#define MAX_CHARSET_GRAPHIC 135
+#define MAX_CHARSET_GRAPHIC 136
 
 
 #endif
