@@ -49,6 +49,7 @@ Improved Hex editor: can now copy to a different memory zone
 Improved menu: 
 -can now use PgUp,PgDn to jump menu pages
 -added setting to disable File Utilities menu
+-added more cyrillic characters support
 Improved assembler: added defs command
 Improved AY Sheet: now you can select which AY Chip to show
 Improved file selector: when asking for a directory, only shows directories, not files
